fix: tweak popup window heights
This accomplishes two things:
* prevent overlapping with the chat box in most regular browser
  circumstances, which has bugged me for a while
* provide a workaround for the 100vh issue on iOS Safari, by simply
  leaving more blank space

There might be better workarounds available. We'll see if people find
the extra vertical space too much, or if it needs some more
responsivity.

--- a/crawl-ref/source/webserver/game_data/static/style.css
+++ b/crawl-ref/source/webserver/game_data/static/style.css
@@ -1044,7 +1044,7 @@ canvas {
 
 .ui-popup-outer {
     margin: 50px;
-    max-height: calc(100vh - 100px);
+    max-height: calc(95vh - 100px);
 
     padding: 20px;
     background-color: #040204;
@@ -1063,7 +1063,7 @@ canvas {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    max-height: calc(100vh - 100px - 46px); /* for IE11 */
+    max-height: calc(95vh - 100px - 46px); /* for IE11 */
 }
 .ui-popup-inner:after {
     display: block;
@@ -1137,10 +1137,10 @@ canvas {
     }
     .ui-popup-outer {
         margin: 20px;
-        max-height: calc(100vh - 40px);
+        max-height: calc(95vh - 40px);
     }
     .ui-popup-inner {
-        max-height: calc(100vh - 40px - 46px);
+        max-height: calc(95vh - 40px - 46px);
     }
 }
 
